feat(01-01): configure Android permissions and build settings
- Add READ_CONTACTS, READ_SMS, READ_CALL_LOG, READ_PHONE_STATE permissions
- Set compileSdk to 36 (required by plugin dependencies)
- Configure targetSdk 34 and minSdk 21
- Enable core library desugaring for call_log package
- Update app label to PhoneSync

--- a/apps/android_provider/android/app/src/main/AndroidManifest.xml
+++ b/apps/android_provider/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,16 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+    <!-- Contacts permission -->
+    <uses-permission android:name="android.permission.READ_CONTACTS"/>
+
+    <!-- SMS permissions -->
+    <uses-permission android:name="android.permission.READ_SMS"/>
+
+    <!-- Call log permissions (requires READ_PHONE_STATE on Android 9+) -->
+    <uses-permission android:name="android.permission.READ_CALL_LOG"/>
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
+
     <application
-        android:label="android_provider"
+        android:label="PhoneSync"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
