feat(02-01): add network dependencies and Android permissions
- Add shelf, shelf_router, nsd packages to pubspec.yaml
- Add INTERNET, ACCESS_WIFI_STATE, CHANGE_WIFI_MULTICAST_STATE permissions
- Dependencies required for HTTP server and mDNS service advertisement

--- a/apps/android_provider/android/app/src/main/AndroidManifest.xml
+++ b/apps/android_provider/android/app/src/main/AndroidManifest.xml
@@ -9,6 +9,11 @@
     <uses-permission android:name="android.permission.READ_CALL_LOG"/>
     <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
 
+    <!-- Network permissions for HTTP server and mDNS -->
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
+    <uses-permission android:name="android.permission.CHANGE_WIFI_MULTICAST_STATE"/>
+
     <application
         android:label="PhoneSync"
         android:name="${applicationName}"
