--- a/apps/android_provider/pubspec.yaml
+++ b/apps/android_provider/pubspec.yaml
@@ -16,6 +16,9 @@ dependencies:
   permission_handler: ^12.0.1
   shared_preferences: ^2.3.0
   flutter_riverpod: ^2.6.1
+  shelf: ^1.4.2
+  shelf_router: ^1.1.4
+  nsd: ^4.1.0
   core:
     path: ../../packages/core
 
