--- a/apps/desktop_client/pubspec.yaml
+++ b/apps/desktop_client/pubspec.yaml
@@ -16,6 +16,12 @@ dependencies:
   flutter_secure_storage: ^9.0.0
   pinput: ^6.0.1
   path_provider: ^2.1.5
+  drift: ^2.21.0
+  sqlite3_flutter_libs: ^0.5.0
+  path: ^1.9.0
+  excel: ^4.0.6
+  intl: ^0.19.0
+  file_picker: ^10.1.7
   core:
     path: ../../packages/core
 
@@ -23,6 +29,8 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
+  drift_dev: ^2.21.0
+  build_runner: ^2.4.14
 
 flutter:
   uses-material-design: true
